feat: connection to database added

--- a/Solucion.ipynb
+++ b/Solucion.ipynb
@@ -201,6 +201,140 @@
    "id": "fb647a9a59e767f2"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Conexión con la Base de Datos"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f87bfc92b5468592"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mysql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmysql\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconnector\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mconfigparser\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'mysql'"
+     ]
+    }
+   ],
+   "source": [
+    "import mysql.connector\n",
+    "import configparser\n",
+    "import pandas as pd\n",
+    "\n",
+    "class Connection:\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Inicializa una conexión a la base de datos utilizando la información de configuración proporcionada en\n",
+    "        el archivo 'config.ini'.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        config = configparser.ConfigParser()\n",
+    "        config.read('resources/config.ini')\n",
+    "        connection_info = config['database']\n",
+    "\n",
+    "        self.connection = mysql.connector.connect(\n",
+    "            database=connection_info['database'],\n",
+    "            host=connection_info['host'],\n",
+    "            user=connection_info['user'],\n",
+    "            password=connection_info['password']\n",
+    "        )\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Ejecuta una consulta en la base de datos y realiza una confirmación de la transacción.\n",
+    "\n",
+    "        Args:\n",
+    "            query (str): La consulta SQL que se va a ejecutar.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def execute(self, query):\n",
+    "        cursor = self.connection.cursor()\n",
+    "        cursor.execute(query, multi=True)\n",
+    "        self.connection.commit()\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Ejecuta una consulta SELECT en la base de datos y devuelve los resultados como una lista de tuplas.\n",
+    "\n",
+    "        Args:\n",
+    "            query (str): La consulta SELECT SQL que se va a ejecutar.\n",
+    "\n",
+    "        Returns:\n",
+    "            list: Una lista de tuplas que representan los resultados de la consulta.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def execute_select(self, query):\n",
+    "        cursor = self.connection.cursor()\n",
+    "        cursor.execute(query)\n",
+    "        result = cursor.fetchall()\n",
+    "        cursor.close()\n",
+    "        return result\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Ejecuta una consulta SELECT en la base de datos y devuelve los resultados como un DataFrame de Pandas.\n",
+    "\n",
+    "        Args:\n",
+    "            query (str): La consulta SELECT SQL que se va a ejecutar.\n",
+    "\n",
+    "        Returns:\n",
+    "            pandas.DataFrame or None: Un DataFrame de Pandas que contiene los resultados de la consulta o None si no \n",
+    "            hay resultados.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def execute_select_as_dataframe(self, query):\n",
+    "        result = self.execute_select(query)\n",
+    "        if result:\n",
+    "            cursor = self.connection.cursor()\n",
+    "            cursor.execute(query)\n",
+    "            columns = [desc[0] for desc in cursor.description]\n",
+    "            cursor.close()\n",
+    "\n",
+    "            df = pd.DataFrame(result, columns=columns)\n",
+    "            return df\n",
+    "        else:\n",
+    "            return None\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Ejecuta una consulta SELECT en la base de datos y devuelve los resultados como una lista de tuplas.\n",
+    "\n",
+    "        Args:\n",
+    "            query (str): La consulta SELECT SQL que se va a ejecutar.\n",
+    "\n",
+    "        Returns:\n",
+    "            list: Una lista de tuplas que representan los resultados de la consulta.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def select(self, query):\n",
+    "        cursor = self.connection.cursor()\n",
+    "        cursor.execute(query)\n",
+    "        result = cursor.fetchall()\n",
+    "        cursor.close()\n",
+    "        return result\n",
+    "\n",
+    "    \"\"\"\n",
+    "        Cierra la conexión a la base de datos.\n",
+    "    \"\"\"\n",
+    "    def close(self):\n",
+    "        self.connection.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-02T03:50:57.983826800Z",
+     "start_time": "2023-12-02T03:50:56.097694300Z"
+    }
+   },
+   "id": "42db5d46f543497d"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
@@ -208,7 +342,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "19bdf3527c6ab66"
+   "id": "d04d49b7583fc176"
   }
  ],
  "metadata": {
