fix: fact table char transform fixed

--- a/Solucion.ipynb
+++ b/Solucion.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "with open('Scripts/star_schema.sql', 'r') as file:\n",
@@ -425,15 +425,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T01:45:20.836824100Z",
-     "start_time": "2023-12-04T01:45:20.188058800Z"
+     "end_time": "2023-12-04T01:58:11.666386800Z",
+     "start_time": "2023-12-04T01:58:11.019116500Z"
     }
    },
    "id": "8447f10b89ef124b"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "class Transform:\n",
@@ -593,10 +593,12 @@
     "            \"È\": \"é\",\n",
     "            \"·\": \"á\",\n",
     "            \"Ì\": \"í\",\n",
-    "            \"Ò\": \"ñ\"\n",
+    "            \"Ò\": \"ñ\",\n",
+    "            \"˙\": \"ú\"\n",
     "        }\n",
     "\n",
     "        df['Producto'] = df['Producto'].replace(dict, regex=True)\n",
+    "        df['Tipo producto'] = df['Tipo producto'].replace(dict, regex=True)\n",
     "\n",
     "        dict = {\n",
     "            \"Û\": \"ó\",\n",
@@ -738,21 +740,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T01:45:22.416674800Z",
-     "start_time": "2023-12-04T01:45:22.374153400Z"
+     "end_time": "2023-12-04T01:58:30.760765700Z",
+     "start_time": "2023-12-04T01:58:30.725805400Z"
     }
    },
    "id": "1f7c9eded75e1f53"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ignac\\AppData\\Local\\Temp\\ipykernel_13992\\706097765.py:123: SettingWithCopyWarning: \n",
+      "C:\\Users\\ignac\\AppData\\Local\\Temp\\ipykernel_13992\\1727116860.py:123: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -780,15 +782,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T01:45:24.930247800Z",
-     "start_time": "2023-12-04T01:45:24.321236500Z"
+     "end_time": "2023-12-04T01:58:33.203917900Z",
+     "start_time": "2023-12-04T01:58:31.749689100Z"
     }
    },
    "id": "3351e901ff33c73c"
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "class Load:\n",
@@ -862,24 +864,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T01:45:28.071218200Z",
-     "start_time": "2023-12-04T01:45:28.027040200Z"
+     "end_time": "2023-12-04T01:58:34.521861300Z",
+     "start_time": "2023-12-04T01:58:34.497009200Z"
     }
    },
    "id": "ea039a465f81d707"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "day      0\nmonth    0\nyear     0\ndate     0\nweek     0\nid       0\ndtype: int64"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 30,
+   "outputs": [],
    "source": [
     "load = Load(df_time, df_product, df_city, df_product_price, connection)\n",
     "load.load()\n",
@@ -892,11 +886,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T01:48:56.165436400Z",
-     "start_time": "2023-12-04T01:45:29.048058700Z"
+     "end_time": "2023-12-04T02:01:45.435134200Z",
+     "start_time": "2023-12-04T01:58:35.604270100Z"
     }
    },
    "id": "a7d62aa35c95b156"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "56b88b7f294947be"
   }
  ],
  "metadata": {
